# mseq

./: Cargo.toml  README.md  build_no_std.sh  embedded.sh
.github/workflows/: ci.yml  rust.yml
examples/: Cargo.toml  acid_arp_track.rs  clock_div_track.rs  example.mid  impl_track.rs  midi_track.rs  slave_mode.rs
examples/res/: acid_0.csv  arp_0.csv
examples/src/: main.rs
mseq_core/: Cargo.toml  README.md
mseq_core/src/: bpm.rs  conductor.rs  context.rs  lib.rs  midi.rs  midi_controller.rs  midi_out.rs  note.rs  track.rs
mseq_core/tests/: input_test.rs  integration_test.rs  unit_tests.rs
mseq_core/tests/common/: mod.rs
mseq_tracks/: Cargo.toml  README.md
mseq_tracks/src/: acid.rs  arp.rs  div.rs  index.rs  lib.rs  midi.rs
mseq_tracks/tests/: acid_test.rs  arp_test.rs  div_test.rs  unit_tests.rs
mseq_tracks/tests/res/: acid.csv  arp.csv  div.csv  index.toml  midi.mid
src/: acid.rs  arp.rs  clock.rs  conductor.rs  div.rs  input.rs  lib.rs  message.rs  midi_connection.rs  midi_controller.rs  midi_out.rs  no_std_midi_connection.rs  note.rs  std_connection.rs  std_midi_connection.rs  track.rs  trig.rs
src/tests/: common.rs  integration_test.rs  mod.rs
