[workspace]
members = ["."]

[package]
name = "mseq"
version = "0.1.2"
edition = "2021"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/MF-Room/mseq"
authors = ["Julien Eudine <julien@eudine.fr>", "Marius Debussche <marius.debussche@gmail.com>"]
description = "Library for developing MIDI Sequencers."
keywords = ["midi", "music", "sequencer"]
categories = ["multimedia"]

[dependencies]
csv = {version = "1.3.0", optional = true}
midir = {version = "0.9.1", optional = true}
promptly = {version = "0.3.1", optional = true}
serde = {version ="1.0.208", features = ["derive"] }
spin_sleep = "1.2.1"
thiserror-no-std = "2.0.2"
hashbrown = "0.15.2"
log = "0.4.4"
midly = "0.5.3"
fs-err = "2.11.0"

[dev-dependencies]
env_logger = "0.11.5"
rand = "0.8.5"

[features]
default = ["std", "thiserror-no-std/std"]
std = ["csv", "midir", "promptly", "serde/std"]
