[workspace]
members = ["."]

[package]
name = "mseq"
version = "0.1.2"
edition = "2021"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/MF-Room/mseq"
authors = ["Julien Eudine <julien@eudine.fr>", "Marius Debussche <marius.debussche@gmail.com>"]
description = "Library for developing MIDI Sequencers."
keywords = ["midi", "music", "sequencer"]
categories = ["multimedia"]

[dependencies]
csv = {version = "1.3.0", optional = true}
midir = {version = "0.9.1", optional = true}
promptly = {version = "0.3.1", optional = true}
serde = {version = "1.0.208", optional = true, features = ["derive"] }
spin_sleep = {version = "1.2.1", optional = true}
thiserror = {version="2.0.12", default-features = false}
hashbrown = "0.15.2"
log = "0.4.4"
midly = {version = "0.5.3", default-features = false}
fs-err = {version = "2.11.0", optional = true}

[dev-dependencies]
env_logger = "0.11.5"
rand = "0.8.5"

[features]
default = ["std"]
std = ["csv", "midir", "promptly", "serde", "spin_sleep", "fs-err", "thiserror/std", "midly/std", "log/std"]
