[package]
name = "mseq_tracks"
version = "0.2.4"
edition = "2024"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/MF-Room/mseq/tree/main/mseq_tracks"
authors = ["Julien Eudine <julien@eudine.fr>", "Marius Debussche <marius.debussche@gmail.com>"]
description = "Library for developing MIDI Sequencers."
keywords = ["midi", "music", "sequencer"]
categories = ["multimedia"]

[dependencies]
mseq_core = "0.1.5"
thiserror = "2.0.18"
midir = "0.11.0"
serde = {version = "1.0.208", features = ["derive"] }
csv = {version = "1.4.0"}
midly = "0.5.3"
fs-err = "3.3.0"
log = "0.4.29"
hashbrown = "0.17"
toml = "1.1.2"
itertools = "0.14.0"

[features]
default = ["std"]
std = []

